# tcc-def

./: annotations.txt  client_app.py  experiments.txt  gen_sim_cid_profile.py  gen_sim_dataset.py  gen_sim_model.py  gen_sim_profile.py  obs-results.txt  pyproject-shufflenet.toml  pyproject.toml  receive-from-recod.sh  requirements.txt  run_motiv_experiment_1.sh  run_motiv_experiment_1_mobilenet.sh  run_motiv_experiment_2.sh  run_motiv_experiment_4.sh  run_parameter_experiment_1.sh  send-to-recod.sh  server_app.py  slurm.error  slurm.out  slurm_final.error  slurm_final.out  slurm_final_3.error  slurm_final_3.out  slurm_finaleira.error  tcc-final-finaleira.sh  tcc-final.sh  tcc_baseline.sh  tests-plan.txt  todo.txt  views_tcc_def.ipynb
client/: base.py  critical.py  feddyn.py  feddyn_critical.py  prox.py  prox_critical.py
experiments/analysis/: exp_audio.ipynb  exp_base.ipynb  exp_divfl.ipynb  exp_text.ipynb  training_cost.ipynb
experiments/motivational/: design_decision.ipynb  learning_phases.ipynb  participants_change.ipynb  training_buffered.ipynb  training_cost.ipynb
experiments/premotivational/analysis/: critical_metrics.ipynb  recombination.ipynb
model/: Shufflenet_v2_x0_5.pth
outputs/01-09-2025/fedavg_random_constant_20_battery_False_dataset_cifar10_dir_0.3_seed_1/: system_performance.json
outputs/01-09-2025/fedavg_random_constant_20_battery_False_dataset_cifar10_dir_1.0_seed_1/: model_performance.json
outputs/02-12-2025/fedavg_eaflplus_constant_10_battery_True_dataset_cifar10_dir_0.1_seed_42_w_0.25_edgeservers_100/: client_state.json  model_performance.json  system_performance.json
outputs/02-12-2025/fedavg_random_constant_Shufflenet_v2_x0_5_10_battery_True_dataset_cifar10_dir_0.1_seed_42/: model_performance.json  system_performance.json
outputs/02-12-2025/fedavg_random_constant_Shufflenet_v2_x0_5_10_battery_True_dataset_cifar10_dir_1.0_seed_42/: model_performance.json  system_performance.json
outputs/03-12-2025/fedavg_eaflplus_constant_10_battery_True_dataset_cifar10_dir_0.1_seed_42_w_0.25_edgeservers_50/: client_state.json  model_performance.json  system_performance.json
outputs/03-12-2025/fedavg_eaflplus_constant_10_battery_True_dataset_cifar10_dir_1.0_seed_42_w_0.25_edgeservers_100/: client_state.json  model_performance.json  system_performance.json
outputs/04-12-2025/fedavg_eaflplus_constant_10_battery_True_dataset_cifar10_dir_1.0_seed_42_w_0.25_edgeservers_50/: model_performance.json  system_performance.json
profiles/: profiles_Shufflenet_v2_x0_5.json
results/exp-1/resnext/constant-10/: nohup.out
scripts/img_class_agg_variation/: run_experiment_aff_feddyn.sh  run_experiment_aff_fedprox.sh  run_experiment_constant_feddyn.sh  run_experiment_constant_fedprox.sh  run_experiment_criticalfl_feddyn.sh  run_experiment_criticalfl_fedprox.sh  run_experiment_dynff_feddyn.sh  run_experiment_dynff_fedprox.sh  run_experiment_dynffbuff_feddyn.sh  run_experiment_dynffbuff_fedprox.sh  run_experiment_hetaaff_feddyn.sh  run_experiment_hetaaff_fedprox.sh
scripts/img_class_model_variation/: run_experiment_aff.sh  run_experiment_constant.sh  run_experiment_criticalfl.sh  run_experiment_dynff.sh  run_experiment_dynffbuff.sh  run_experiment_fedavg_oort_hetaaff.sh  run_experiment_hetaaff.sh  run_experiment_hetaaff_lrc.sh
scripts/img_class_selection_variation/: run_experiment_fedavg_divfl_aff.sh  run_experiment_fedavg_divfl_constant.sh  run_experiment_fedavg_divfl_critical.sh  run_experiment_fedavg_divfl_dynff.sh  run_experiment_fedavg_divfl_dynffbuff.sh  run_experiment_fedavg_divfl_hetaaff.sh  run_experiment_fedavg_oort_aff.sh  run_experiment_fedavg_oort_constant.sh  run_experiment_fedavg_oort_critical.sh  run_experiment_fedavg_oort_dynff.sh  run_experiment_fedavg_oort_dynffbuff.sh  run_experiment_fedavg_oort_hetaaff.sh
scripts/motivational/: run_motiv_experiment_3_dec.sh  run_motiv_experiment_3_inc.sh  run_motiv_experiment_4.sh
scripts/parameter_finetunning/: run_parameter_experiment_1.sh  run_parameter_experiment_1_shufflenet.sh
scripts/problem_variation/: run_experiment_aff.sh  run_experiment_aff_feddyn.sh  run_experiment_aff_fedprox.sh  run_experiment_constant.sh  run_experiment_constant_feddyn.sh  run_experiment_constant_fedprox.sh  run_experiment_criticalfl.sh  run_experiment_criticalfl_feddyn.sh  run_experiment_hetaaff.sh  run_experiment_hetaaff_feddyn.sh  run_experiment_hetaaff_fedprox.sh
server/strategy/: base.py  fedavg_divfl_aff.py  fedavg_divfl_constant.py  fedavg_divfl_critical.py  fedavg_divfl_dynff.py  fedavg_divfl_dynff_buffered.py  fedavg_divfl_hetaaff.py  fedavg_eafl_constant.py  fedavg_eaflplus_constant.py  fedavg_oort_aff.py  fedavg_oort_constant.py  fedavg_oort_critical.py  fedavg_oort_dynff.py  fedavg_oort_dynff_buffered.py  fedavg_oort_hetaaff.py  fedavg_random_aff.py  fedavg_random_constant.py  fedavg_random_constant_delayed.py  fedavg_random_constant_twophase.py  fedavg_random_criticalfl.py  fedavg_random_dynff.py  fedavg_random_dynff_buffered.py  fedavg_random_hetaaff.py  fedavg_random_recombination.py  feddyn_random_aff.py  feddyn_random_constant.py  feddyn_random_criticalfl.py  feddyn_random_dynff.py  feddyn_random_dynff_buffered.py  feddyn_random_hetaaff.py  fedprox_random_aff.py  fedprox_random_constant.py  fedprox_random_criticalfl.py  fedprox_random_dynff.py  fedprox_random_dynff_buffered.py  fedprox_random_hetaaff.py
test/: base_codes.ipynb  emd.py  fedfim.py  fgn.py  golden_ramp.py  kwt.py  new_audio.py  new_audio_tc_resnet.py  niid-level.py  page-hickley.py  requirements_to_simulation.py  similarity-pacfl.txt  similarity.py  test_pacfl.ipynb
utils/dataset/: config.py  fileloader.py  partition.py
utils/model/: factory.py  manipulation.py
utils/profile/: CRNNResNetAttn.json  KWT.json  Lstm.json  Mobilenet_v2.json  Resnext50_32x4d.json  Shufflenet_v2_x0_5.json  Shufflenet_v2_x0_5_fedprox.json  bandwidth.json  client_metrics.py  client_profiles.py  simplecnn_feddyn.json
utils/simulation/: config.py  profile.py  workflow.py
utils/strategy/: cka.py  divfl.py  dynff.py
(+1927 files in other folders)
